List doctor's patients info and obtain payment information of an in-patient or out-patient

--- a/app/views/out_patients/_new_outpatient_form.html.erb
+++ b/app/views/out_patients/_new_outpatient_form.html.erb
@@ -13,10 +13,13 @@
   <%= f.text_field :address %>
   <br>
   <%= label_tag 'gender' %>
-  <%= select_tag 'gender', raw("<option value=\"m\">Male</option><option value=\"f\">Female</option>") %>
+  <%= select_tag 'gender', raw("<option value=\"M\">Male</option><option value=\"F\">Female</option>") %>
   <br>
   <%= f.label :dob, "Date of Birth" %>
   <%= f.date_field :dob %>
   <br>
   <%= f.submit "Register" %>
 <% end %>
+
+
+
