--- a/app/views/in_patients/_new_inpatient_form.html.erb
+++ b/app/views/in_patients/_new_inpatient_form.html.erb
@@ -13,7 +13,7 @@
   <%= f.text_field :address %>
   <br>
   <%= label_tag 'gender' %>
-  <%= select_tag 'gender', raw("<option value=\"m\">Male</option><option value=\"f\">Female</option>") %>
+  <%= select_tag 'gender', raw("<option value=\"M\">Male</option><option value=\"F\">Female</option>") %>
   <br>
   <%= f.label :dob, "Date of Birth" %>
   <%= f.date_field :dob %>
@@ -32,3 +32,12 @@
   <br>
   <%= f.submit "Register" %>
 <% end %>
+
+
+<%# 2020-01-06 21:18:22,2019-11-27 08:25:22,2019-12-01 21:02:11,2020-01-01 04:13:44,2020-01-08 10:26:35,2020-01-03 19:06:21,2019-01-03 20:47:34,2019-12-10 14:08:12,2020-01-08 04:27:33,2019-12-09 05:44:32
+
+2020-09-14 13:33:39,2019-12-15 09:39:32,2020-02-03 19:13:26,2020-10-05 02:00:00,2020-04-26 03:56:55,2020-10-05 08:32:17,2019-11-29 13:45:35,2020-04-04 14:25:42,2020-04-08 21:21:42,2020-02-19 17:09:08
+
+4,8,2,8,10,2,2,10,8,10
+
+000000001,000000002,000000003,000000004,000000005,000000006,000000007,000000008,000000009,000000010 %>
